# OneCode

./: about.html  contact.html  home.html  index.html  pyproject.toml  run.py  smartcam.html  softs.html  yourpc.html
css/: style.css
errors/: 403.html  404.html  500.html
onecode/: __init__.py  config.py
onecode/main/: routes.py
